[RW-1404][Risk=no] Fix weird extra whitespace to make CH happy! :)

--- a/ui/src/app/views/resource-card/component.css
+++ b/ui/src/app/views/resource-card/component.css
@@ -82,7 +82,7 @@
 
 .card .footer {
   position: absolute;
-  bottom: .01rem;
+  bottom: -0.05rem;
 }
 
 .last-modified {
